Experimentation/parseGADT/src/ParLang.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from ParLang.y
-----------------------------------------------------------------------------

state 12 contains 1 reduce/reduce conflicts.
state 19 contains 2 reduce/reduce conflicts.
state 21 contains 1 reduce/reduce conflicts.
state 55 contains 2 reduce/reduce conflicts.

rule 37 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pModule -> Module                           (0)
	%start_pValue -> Value                             (1)
	%start_pListValue -> ListValue                     (2)
	%start_pDecl -> Decl                               (3)
	%start_pListDecl -> ListDecl                       (4)
	%start_pModel -> Model                             (5)
	%start_pRecipe -> Recipe                           (6)
	%start_pListRecipe -> ListRecipe                   (7)
	%start_pLayer -> Layer                             (8)
	%start_pListLayer -> ListLayer                     (9)
	%start_pIngredient -> Ingredient                   (10)
	%start_pHyperParams -> HyperParams                 (11)
	%start_pListHyperParam -> ListHyperParam           (12)
	%start_pHyperParam -> HyperParam                   (13)
	Integer -> L_integ                                 (14)
	Ident -> L_ident                                   (15)
	Module -> ListDecl                                 (16)
	Value -> Integer                                   (17)
	ListValue ->                                       (18)
	ListValue -> Value                                 (19)
	ListValue -> Value ',' ListValue                   (20)
	Decl -> Model                                      (21)
	Decl -> Recipe                                     (22)
	ListDecl ->                                        (23)
	ListDecl -> ListDecl Decl                          (24)
	Model -> 'model' Ident '{' ListLayer '}'           (25)
	Recipe -> 'recipe' Ident '{' ListLayer '}'         (26)
	ListRecipe ->                                      (27)
	ListRecipe -> ListRecipe Recipe                    (28)
	Layer -> Ingredient HyperParams                    (29)
	Layer -> Ident                                     (30)
	ListLayer ->                                       (31)
	ListLayer -> ListLayer Layer                       (32)
	Ingredient -> 'relu'                               (33)
	Ingredient -> 'conv'                               (34)
	Ingredient -> 'batch_normalize'                    (35)
	HyperParams -> '[' ListHyperParam ']'              (36)
	ListHyperParam ->                                  (37)
	ListHyperParam -> HyperParam ListHyperParam        (38)
	ListHyperParam ->                                  (39)
	ListHyperParam -> HyperParam                       (40)
	ListHyperParam -> HyperParam ',' ListHyperParam    (41)
	HyperParam -> 'strides' ':=' '[' ListValue ']'     (42)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	','            { PT _ (TS _ 1) }
	':='           { PT _ (TS _ 2) }
	'['            { PT _ (TS _ 3) }
	']'            { PT _ (TS _ 4) }
	'batch_normalize'{ PT _ (TS _ 5) }
	'conv'         { PT _ (TS _ 6) }
	'model'        { PT _ (TS _ 7) }
	'recipe'       { PT _ (TS _ 8) }
	'relu'         { PT _ (TS _ 9) }
	'strides'      { PT _ (TS _ 10) }
	'{'            { PT _ (TS _ 11) }
	'}'            { PT _ (TS _ 12) }
	L_integ        { PT _ (TI $$) }
	L_ident        { PT _ (TV $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pModule  rule  0
	%start_pValue   rule  1
	%start_pListValue rule  2
	%start_pDecl    rule  3
	%start_pListDecl rule  4
	%start_pModel   rule  5
	%start_pRecipe  rule  6
	%start_pListRecipe rule  7
	%start_pLayer   rule  8
	%start_pListLayer rule  9
	%start_pIngredient rule  10
	%start_pHyperParams rule  11
	%start_pListHyperParam rule  12
	%start_pHyperParam rule  13
	Integer         rule  14
	Ident           rule  15
	Module          rule  16
	Value           rule  17
	ListValue       rules 18, 19, 20
	Decl            rules 21, 22
	ListDecl        rules 23, 24
	Model           rule  25
	Recipe          rule  26
	ListRecipe      rules 27, 28
	Layer           rules 29, 30
	ListLayer       rules 31, 32
	Ingredient      rules 33, 34, 35
	HyperParams     rule  36
	ListHyperParam  rules 37, 38, 39, 40, 41
	HyperParam      rule  42

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'model'        reduce using rule 23
	'recipe'       reduce using rule 23
	%eof           reduce using rule 23

	Module         goto state 44
	ListDecl       goto state 45

State 1


	L_integ        shift, and enter state 15

	Integer        goto state 40
	Value          goto state 43

State 2


	L_integ        shift, and enter state 15
	%eof           reduce using rule 18

	Integer        goto state 40
	Value          goto state 41
	ListValue      goto state 42

State 3


	'model'        shift, and enter state 35
	'recipe'       shift, and enter state 33

	Decl           goto state 37
	Model          goto state 38
	Recipe         goto state 39

State 4


	'model'        reduce using rule 23
	'recipe'       reduce using rule 23
	%eof           reduce using rule 23

	ListDecl       goto state 36

State 5


	'model'        shift, and enter state 35

	Model          goto state 34

State 6


	'recipe'       shift, and enter state 33

	Recipe         goto state 32

State 7


	'recipe'       reduce using rule 27
	%eof           reduce using rule 27

	ListRecipe     goto state 31

State 8


	'batch_normalize'shift, and enter state 23
	'conv'         shift, and enter state 24
	'relu'         shift, and enter state 25
	L_ident        shift, and enter state 30

	Ident          goto state 27
	Layer          goto state 28
	Ingredient     goto state 29

State 9


	'batch_normalize'reduce using rule 31
	'conv'         reduce using rule 31
	'relu'         reduce using rule 31
	L_ident        reduce using rule 31
	%eof           reduce using rule 31

	ListLayer      goto state 26

State 10


	'batch_normalize'shift, and enter state 23
	'conv'         shift, and enter state 24
	'relu'         shift, and enter state 25

	Ingredient     goto state 22

State 11


	'['            shift, and enter state 21

	HyperParams    goto state 20

State 12


	'strides'      shift, and enter state 17
	%eof           reduce using rule 39
			(reduce using rule 37)


	ListHyperParam goto state 18
	HyperParam     goto state 19

State 13


	'strides'      shift, and enter state 17

	HyperParam     goto state 16

State 14


	L_integ        shift, and enter state 15


State 15

	Integer -> L_integ .                                (rule 14)

	','            reduce using rule 14
	']'            reduce using rule 14
	%eof           reduce using rule 14


State 16

	%start_pHyperParam -> HyperParam .                  (rule 13)

	%eof           accept


State 17

	HyperParam -> 'strides' . ':=' '[' ListValue ']'    (rule 42)

	':='           shift, and enter state 56


State 18

	%start_pListHyperParam -> ListHyperParam .          (rule 12)

	%eof           accept


State 19

	ListHyperParam -> HyperParam . ListHyperParam       (rule 38)
	ListHyperParam -> HyperParam .                      (rule 40)
	ListHyperParam -> HyperParam . ',' ListHyperParam    (rule 41)

	','            shift, and enter state 55
	']'            reduce using rule 40
			(reduce using rule 39)
			(reduce using rule 37)

	'strides'      shift, and enter state 17
	%eof           reduce using rule 40
			(reduce using rule 39)
			(reduce using rule 37)


	ListHyperParam goto state 54
	HyperParam     goto state 19

State 20

	%start_pHyperParams -> HyperParams .                (rule 11)

	%eof           accept


State 21

	HyperParams -> '[' . ListHyperParam ']'             (rule 36)

	']'            reduce using rule 39
			(reduce using rule 37)

	'strides'      shift, and enter state 17

	ListHyperParam goto state 53
	HyperParam     goto state 19

State 22

	%start_pIngredient -> Ingredient .                  (rule 10)

	%eof           accept


State 23

	Ingredient -> 'batch_normalize' .                   (rule 35)

	'['            reduce using rule 35
	%eof           reduce using rule 35


State 24

	Ingredient -> 'conv' .                              (rule 34)

	'['            reduce using rule 34
	%eof           reduce using rule 34


State 25

	Ingredient -> 'relu' .                              (rule 33)

	'['            reduce using rule 33
	%eof           reduce using rule 33


State 26

	%start_pListLayer -> ListLayer .                    (rule 9)
	ListLayer -> ListLayer . Layer                      (rule 32)

	'batch_normalize'shift, and enter state 23
	'conv'         shift, and enter state 24
	'relu'         shift, and enter state 25
	L_ident        shift, and enter state 30
	%eof           accept

	Ident          goto state 27
	Layer          goto state 52
	Ingredient     goto state 29

State 27

	Layer -> Ident .                                    (rule 30)

	'batch_normalize'reduce using rule 30
	'conv'         reduce using rule 30
	'relu'         reduce using rule 30
	'}'            reduce using rule 30
	L_ident        reduce using rule 30
	%eof           reduce using rule 30


State 28

	%start_pLayer -> Layer .                            (rule 8)

	%eof           accept


State 29

	Layer -> Ingredient . HyperParams                   (rule 29)

	'['            shift, and enter state 21

	HyperParams    goto state 51

State 30

	Ident -> L_ident .                                  (rule 15)

	'batch_normalize'reduce using rule 15
	'conv'         reduce using rule 15
	'relu'         reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	L_ident        reduce using rule 15
	%eof           reduce using rule 15


State 31

	%start_pListRecipe -> ListRecipe .                  (rule 7)
	ListRecipe -> ListRecipe . Recipe                   (rule 28)

	'recipe'       shift, and enter state 33
	%eof           accept

	Recipe         goto state 50

State 32

	%start_pRecipe -> Recipe .                          (rule 6)

	%eof           accept


State 33

	Recipe -> 'recipe' . Ident '{' ListLayer '}'        (rule 26)

	L_ident        shift, and enter state 30

	Ident          goto state 49

State 34

	%start_pModel -> Model .                            (rule 5)

	%eof           accept


State 35

	Model -> 'model' . Ident '{' ListLayer '}'          (rule 25)

	L_ident        shift, and enter state 30

	Ident          goto state 48

State 36

	%start_pListDecl -> ListDecl .                      (rule 4)
	ListDecl -> ListDecl . Decl                         (rule 24)

	'model'        shift, and enter state 35
	'recipe'       shift, and enter state 33
	%eof           accept

	Decl           goto state 46
	Model          goto state 38
	Recipe         goto state 39

State 37

	%start_pDecl -> Decl .                              (rule 3)

	%eof           accept


State 38

	Decl -> Model .                                     (rule 21)

	'model'        reduce using rule 21
	'recipe'       reduce using rule 21
	%eof           reduce using rule 21


State 39

	Decl -> Recipe .                                    (rule 22)

	'model'        reduce using rule 22
	'recipe'       reduce using rule 22
	%eof           reduce using rule 22


State 40

	Value -> Integer .                                  (rule 17)

	','            reduce using rule 17
	']'            reduce using rule 17
	%eof           reduce using rule 17


State 41

	ListValue -> Value .                                (rule 19)
	ListValue -> Value . ',' ListValue                  (rule 20)

	','            shift, and enter state 47
	']'            reduce using rule 19
	%eof           reduce using rule 19


State 42

	%start_pListValue -> ListValue .                    (rule 2)

	%eof           accept


State 43

	%start_pValue -> Value .                            (rule 1)

	%eof           accept


State 44

	%start_pModule -> Module .                          (rule 0)

	%eof           accept


State 45

	Module -> ListDecl .                                (rule 16)
	ListDecl -> ListDecl . Decl                         (rule 24)

	'model'        shift, and enter state 35
	'recipe'       shift, and enter state 33
	%eof           reduce using rule 16

	Decl           goto state 46
	Model          goto state 38
	Recipe         goto state 39

State 46

	ListDecl -> ListDecl Decl .                         (rule 24)

	'model'        reduce using rule 24
	'recipe'       reduce using rule 24
	%eof           reduce using rule 24


State 47

	ListValue -> Value ',' . ListValue                  (rule 20)

	']'            reduce using rule 18
	L_integ        shift, and enter state 15
	%eof           reduce using rule 18

	Integer        goto state 40
	Value          goto state 41
	ListValue      goto state 62

State 48

	Model -> 'model' Ident . '{' ListLayer '}'          (rule 25)

	'{'            shift, and enter state 61


State 49

	Recipe -> 'recipe' Ident . '{' ListLayer '}'        (rule 26)

	'{'            shift, and enter state 60


State 50

	ListRecipe -> ListRecipe Recipe .                   (rule 28)

	'recipe'       reduce using rule 28
	%eof           reduce using rule 28


State 51

	Layer -> Ingredient HyperParams .                   (rule 29)

	'batch_normalize'reduce using rule 29
	'conv'         reduce using rule 29
	'relu'         reduce using rule 29
	'}'            reduce using rule 29
	L_ident        reduce using rule 29
	%eof           reduce using rule 29


State 52

	ListLayer -> ListLayer Layer .                      (rule 32)

	'batch_normalize'reduce using rule 32
	'conv'         reduce using rule 32
	'relu'         reduce using rule 32
	'}'            reduce using rule 32
	L_ident        reduce using rule 32
	%eof           reduce using rule 32


State 53

	HyperParams -> '[' ListHyperParam . ']'             (rule 36)

	']'            shift, and enter state 59


State 54

	ListHyperParam -> HyperParam ListHyperParam .       (rule 38)

	']'            reduce using rule 38
	%eof           reduce using rule 38


State 55

	ListHyperParam -> HyperParam ',' . ListHyperParam    (rule 41)

	']'            reduce using rule 39
			(reduce using rule 37)

	'strides'      shift, and enter state 17
	%eof           reduce using rule 39
			(reduce using rule 37)


	ListHyperParam goto state 58
	HyperParam     goto state 19

State 56

	HyperParam -> 'strides' ':=' . '[' ListValue ']'    (rule 42)

	'['            shift, and enter state 57


State 57

	HyperParam -> 'strides' ':=' '[' . ListValue ']'    (rule 42)

	']'            reduce using rule 18
	L_integ        shift, and enter state 15

	Integer        goto state 40
	Value          goto state 41
	ListValue      goto state 65

State 58

	ListHyperParam -> HyperParam ',' ListHyperParam .    (rule 41)

	']'            reduce using rule 41
	%eof           reduce using rule 41


State 59

	HyperParams -> '[' ListHyperParam ']' .             (rule 36)

	'batch_normalize'reduce using rule 36
	'conv'         reduce using rule 36
	'relu'         reduce using rule 36
	'}'            reduce using rule 36
	L_ident        reduce using rule 36
	%eof           reduce using rule 36


State 60

	Recipe -> 'recipe' Ident '{' . ListLayer '}'        (rule 26)

	'batch_normalize'reduce using rule 31
	'conv'         reduce using rule 31
	'relu'         reduce using rule 31
	'}'            reduce using rule 31
	L_ident        reduce using rule 31

	ListLayer      goto state 64

State 61

	Model -> 'model' Ident '{' . ListLayer '}'          (rule 25)

	'batch_normalize'reduce using rule 31
	'conv'         reduce using rule 31
	'relu'         reduce using rule 31
	'}'            reduce using rule 31
	L_ident        reduce using rule 31

	ListLayer      goto state 63

State 62

	ListValue -> Value ',' ListValue .                  (rule 20)

	']'            reduce using rule 20
	%eof           reduce using rule 20


State 63

	Model -> 'model' Ident '{' ListLayer . '}'          (rule 25)
	ListLayer -> ListLayer . Layer                      (rule 32)

	'batch_normalize'shift, and enter state 23
	'conv'         shift, and enter state 24
	'relu'         shift, and enter state 25
	'}'            shift, and enter state 68
	L_ident        shift, and enter state 30

	Ident          goto state 27
	Layer          goto state 52
	Ingredient     goto state 29

State 64

	Recipe -> 'recipe' Ident '{' ListLayer . '}'        (rule 26)
	ListLayer -> ListLayer . Layer                      (rule 32)

	'batch_normalize'shift, and enter state 23
	'conv'         shift, and enter state 24
	'relu'         shift, and enter state 25
	'}'            shift, and enter state 67
	L_ident        shift, and enter state 30

	Ident          goto state 27
	Layer          goto state 52
	Ingredient     goto state 29

State 65

	HyperParam -> 'strides' ':=' '[' ListValue . ']'    (rule 42)

	']'            shift, and enter state 66


State 66

	HyperParam -> 'strides' ':=' '[' ListValue ']' .    (rule 42)

	','            reduce using rule 42
	']'            reduce using rule 42
	'strides'      reduce using rule 42
	%eof           reduce using rule 42


State 67

	Recipe -> 'recipe' Ident '{' ListLayer '}' .        (rule 26)

	'model'        reduce using rule 26
	'recipe'       reduce using rule 26
	%eof           reduce using rule 26


State 68

	Model -> 'model' Ident '{' ListLayer '}' .          (rule 25)

	'model'        reduce using rule 25
	'recipe'       reduce using rule 25
	%eof           reduce using rule 25


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 43
Number of terminals: 14
Number of non-terminals: 30
Number of states: 69
